--- a/src/styles/weather.css
+++ b/src/styles/weather.css
@@ -30,4 +30,9 @@
   font-size: 32px;
   font-weight: 800;
   margin: 15px 0 5px;
+  width: 45%;
+  text-align: center;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
